--- a/src/main/webapp/app/valintaryhma/hakukohdekoodit.html
+++ b/src/main/webapp/app/valintaryhma/hakukohdekoodit.html
@@ -1,50 +1,52 @@
 <div ng-controller="HakukohdekoodiController">
-    <label class="form-row-label" for="">{{ t('hakukohdekoodit.header') || 'Hakukohdekoodit' }}</label>
+    <div class="form-group">
+        <label class="control-label col-md-2" for="">{{ t('hakukohdekoodit.header') || 'Hakukohdekoodit' }}</label>
 
-    <div class="row">
-        <button class="btn btn-sm btn-default" ng-click="toggleHakukohdekoodit()">
-            <i ng-if="!toggleValintaryhmaHakukohdekoodit" class="fa fa-eye"></i>
-            <i ng-if="toggleValintaryhmaHakukohdekoodit" class="fa fa-eye-slash"></i> {{ t('hakukohdekoodit.header') || 'Hakukohdekoodit' }}
-        </button>
-        <button auth ng-disabled="!userAccess.updateOrg" ng-click="showHakukohdeKoodit()" type="button" class="btn btn-sm btn-default">
-            <i class="fa fa-plus"></i> {{ t('hakukohdekoodit.uusi') || 'Uusi hakukohdekoodi' }}
-        </button>
+        <div class="col-md-10">
+            <button class="btn btn-sm btn-default" ng-click="toggleHakukohdekoodit()">
+                <i ng-if="!toggleValintaryhmaHakukohdekoodit" class="fa fa-eye"></i>
+                <i ng-if="toggleValintaryhmaHakukohdekoodit" class="fa fa-eye-slash"></i> {{ t('hakukohdekoodit.header')
+                || 'Hakukohdekoodit' }}
+            </button>
+            <button auth ng-disabled="!userAccess.updateOrg" ng-click="showHakukohdeKoodit()" type="button"
+                    class="btn btn-sm btn-default">
+                <i class="fa fa-plus"></i> {{ t('hakukohdekoodit.uusi') || 'Uusi hakukohdekoodi' }}
+            </button>
 
-        <modal modal-template="../common/partials/hakukohdekoodinValinta.html" auth="update">
-            <modal-open></modal-open>
-        </modal>
-    </div>
-
-    <label class="form-row-label"></label>
-
-    <div class="form-row-content">
-
-        <div ng-if="toggleValintaryhmaHakukohdekoodit && !model.valintaryhma.hakukohdekoodit" class="alert alert-info">
-            {{ t('hakukohdekoodit.virhe') || 'Tähän valintaryhmään ei ole vielä liitetty yhtään hakukohdekoodia' }}
+            <modal modal-template="../common/partials/hakukohdekoodinValinta.html" auth="update">
+                <modal-open></modal-open>
+            </modal>
         </div>
-        <table ng-if="toggleValintaryhmaHakukohdekoodit && model.valintaryhma.hakukohdekoodit"
-               class="virkailija-table-1">
-            <thead>
-            <tr>
-                <th>{{ t('hakukohdekoodit.koodi') || 'koodi' }}</th>
-                <th>{{ t('hakukohdekoodit.arvo') || 'arvo' }}</th>
-                <th>{{ t('hakukohdekoodit.nimi') || 'nimi' }}</th>
-                <th>{{ t('hakukohdekoodit.poista') || 'poista' }}</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr ng-repeat="hakukohdekoodi in model.valintaryhma.hakukohdekoodit">
-                <td class="align-center">{{hakukohdekoodi.uri}}</td>
-                <td class="align-center">{{hakukohdekoodi.arvo}}</td>
-                <td class="align-center">{{hakukohdekoodi.nimiFi}}</td>
-                <td class="align-center">
-                    <i class="fa fa-trash-o" ng-click="removeHakukohdeKoodi(hakukohdekoodi)"></i>
-                </td>
-            </tr>
 
-            </tbody>
+        <div class="col-md-10 col-md-offset-2">
 
-        </table>
+            <div ng-if="toggleValintaryhmaHakukohdekoodit && !model.valintaryhma.hakukohdekoodit"
+                 class="alert alert-info">
+                {{ t('hakukohdekoodit.virhe') || 'Tähän valintaryhmään ei ole vielä liitetty yhtään hakukohdekoodia' }}
+            </div>
+            <table ng-if="toggleValintaryhmaHakukohdekoodit && model.valintaryhma.hakukohdekoodit"
+                   class="virkailija-table-1">
+                <thead>
+                <tr>
+                    <th>{{ t('hakukohdekoodit.koodi') || 'koodi' }}</th>
+                    <th>{{ t('hakukohdekoodit.arvo') || 'arvo' }}</th>
+                    <th>{{ t('hakukohdekoodit.nimi') || 'nimi' }}</th>
+                    <th>{{ t('hakukohdekoodit.poista') || 'poista' }}</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr ng-repeat="hakukohdekoodi in model.valintaryhma.hakukohdekoodit">
+                    <td class="align-center">{{hakukohdekoodi.uri}}</td>
+                    <td class="align-center">{{hakukohdekoodi.arvo}}</td>
+                    <td class="align-center">{{hakukohdekoodi.nimiFi}}</td>
+                    <td class="align-center">
+                        <i class="fa fa-trash-o" ng-click="removeHakukohdeKoodi(hakukohdekoodi)"></i>
+                    </td>
+                </tr>
+
+                </tbody>
+
+            </table>
+        </div>
     </div>
-    <div class="clear"></div>
 </div>
