VT-944: valintakoe- ja hakukohdekoodinäkymiin puuttuvat oikeustarkistukset

--- a/src/main/webapp/app/valintaryhma/hakukohdekoodit.html
+++ b/src/main/webapp/app/valintaryhma/hakukohdekoodit.html
@@ -40,7 +40,9 @@
                     <td class="align-center">{{hakukohdekoodi.arvo}}</td>
                     <td class="align-center">{{hakukohdekoodi.nimiFi}}</td>
                     <td class="align-center">
-                        <i class="fa fa-trash-o" ng-click="removeHakukohdeKoodi(hakukohdekoodi)"></i>
+                        <button auth ng-disabled="!userAccess.updateOrg" ng-click="removeHakukohdeKoodi(hakukohdekoodi)">
+                            <i class="fa fa-trash-o"></i>
+                        </button>
                     </td>
                 </tr>
 
