--- a/src/main/webapp/app/valintaryhma/valintaryhmalomake.html
+++ b/src/main/webapp/app/valintaryhma/valintaryhmalomake.html
@@ -72,7 +72,7 @@
 
     <div class="col-md-6">
         <input auth ng-disabled="!userAccess.updateOrg" class="form-control"
-               type="text" name="" id="valintaryhmanimi" ng-model="model.valintaryhma.nimi" required/>
+               type="text" id="valintaryhmanimi" ng-model="model.valintaryhma.nimi" required/>
         <span class="red" ng-show="model.nameerror">{{ t('valintaryhmalomakeuusi.valintaryhmalomakeuusi.nimiloytyyjo') || 'Valintaryhmän nimi on jo käytössä. Anna jokin toinen nimi ryhmälle.' }}</span>
     </div>
 </div>
