--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/laskentakaavalomake.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/laskentakaavalomake.html
@@ -14,23 +14,23 @@
     </div>
 
     <div class="col-sm-12 margin-bottom-2">
-        <span class="btn btn-sm btn-default" ng-click="back()" popover-popup-delay="250" popover-placement="top"
+        <button class="btn btn-sm btn-default" ng-click="back()" popover-popup-delay="250" popover-placement="top"
               popover-trigger="mouseenter" popover="{{ t('common.muista') || 'Muista tallentaa muutoksesi' }}"><i
-                class="fa fa-arrow-left"></i> {{ t('laskentakaavat.listaan') || 'Laskentakaavalistaan' }}</span>
-        <span class="btn btn-sm btn-default" ng-if="hasHakijaryhmaCookie()" ng-click="returnHakijaryhmaLuonti()"
+                class="fa fa-arrow-left"></i> {{ t('laskentakaavat.listaan') || 'Laskentakaavalistaan' }}</button>
+        <button class="btn btn-sm btn-default" ng-if="hasHakijaryhmaCookie()" ng-click="returnHakijaryhmaLuonti()"
               popover-popup-delay="250"
               popover-placement="top"
               popover-trigger="mouseenter"
               popover="{{ t('common.muista') || 'Muista tallentaa muutoksesi' }}">
             <i class="fa fa-arrow-left"></i> {{ t('laskentakaavat.hakijaryhmanluontiin') || 'Takaisin hakijaryhmän luontiin' }}
-        </span>
-        <span ng-if="kaavaHasId" class="btn btn-sm btn-primary" ng-click="persist()"><i class="fa fa-floppy-o"></i> {{ t('common.tallenna') || 'Tallenna' }}</span>
-        <span ng-if="!kaavaHasId && newKaavaTemplate" class="btn btn-sm btn-primary" ng-click="persistNewKaava()"><i
-                class="fa fa-floppy-o"></i> {{ t('laskentakaavat.uusikaava.tallenna') || 'Tallenna uusi kaava'}}</span>
-        <span ng-if="!kaavaHasId && !newKaavaTemplate" class="btn btn-sm btn-primary"
+        </button>
+        <button auth ng-disabled="!userAccess.updateOrg" ng-if="kaavaHasId" class="btn btn-sm btn-primary" ng-click="persist()"><i class="fa fa-floppy-o"></i> {{ t('common.tallenna') || 'Tallenna' }}</button>
+        <button ng-if="!kaavaHasId && newKaavaTemplate" class="btn btn-sm btn-primary" ng-click="persistNewKaava()"><i
+                class="fa fa-floppy-o"></i> {{ t('laskentakaavat.uusikaava.tallenna') || 'Tallenna uusi kaava'}}</button>
+        <button ng-if="!kaavaHasId && !newKaavaTemplate" class="btn btn-sm btn-primary"
               ng-click="initializeKaava()">
             <i class="fa fa-plus"></i> {{ t('uusilaskentakaava.alusta') || 'Alusta uusi laskentakaava' }}
-        </span>
+        </button>
     </div>
 
 
